Revert "Protect saved tasks and improve error feedback"
This reverts commit 7b54d0a1db3e156a2840d5a8be587388718279a7.