@@ -2,19 +2,10 @@ package james.storage;
 
 import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.StringReader;
-import java.nio.ByteBuffer;
-import java.nio.channels.FileChannel;
-import java.nio.channels.FileLock;
-import java.nio.channels.OverlappingFileLockException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
-import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
 
 import james.exception.UserInputException;
 import james.task.Task;
@@ -24,15 +15,12 @@ import james.task.TaskList;
  * Handles reading tasks from and writing tasks to the file system.
  */
 public class Storage {
+    private static final String INVALID_TASK_WARNING_PREFIX = "Warning: Skipping invalid saved task entry: ";
     private static final String READ_ERROR_WARNING_PREFIX = "Warning: Error reading saved tasks file: ";
 
     private final Path filePath;
     // Prevents a partial or failed load from replacing the original data.
     private boolean hasLoadErrors;
-    private final List<String> loadWarnings = new ArrayList<>();
-    // Records the exact bytes loaded or last saved; null means the file did not exist.
-    private byte[] savedContents;
-    private String saveError = "";
 
     /**
      * Constructs a Storage instance with the given file path.
@@ -53,18 +41,13 @@ public class Storage {
     public ArrayList<Task> load() {
         ArrayList<Task> loadedTasks = new ArrayList<>();
         hasLoadErrors = false;
-        loadWarnings.clear();
         try {
-            savedContents = readCurrentContents();
-            if (savedContents == null) {
+            if (Files.notExists(filePath)) {
                 return loadedTasks;
             }
-            String contents = StandardCharsets.UTF_8.newDecoder().decode(ByteBuffer.wrap(savedContents)).toString();
-            try (BufferedReader reader = new BufferedReader(new StringReader(contents))) {
-                int lineNumber = 0;
+            try (BufferedReader reader = Files.newBufferedReader(filePath)) {
                 String line;
                 while ((line = reader.readLine()) != null) {
-                    lineNumber++;
                     if (line.isBlank()) {
                         continue;
                     }
@@ -76,13 +59,13 @@ public class Storage {
                         loadedTasks.add(task);
                     } catch (UserInputException e) {
                         hasLoadErrors = true;
-                        loadWarnings.add("Warning: Skipping invalid saved task at line " + lineNumber + ".");
+                        System.out.println(INVALID_TASK_WARNING_PREFIX + line);
                     }
                 }
             }
         } catch (IOException | SecurityException e) {
             hasLoadErrors = true;
-            loadWarnings.add(READ_ERROR_WARNING_PREFIX + filePath);
+            System.out.println(READ_ERROR_WARNING_PREFIX + e.getMessage());
         }
         return loadedTasks;
     }
@@ -97,36 +80,6 @@ public class Storage {
     }
 
     /**
-     * Returns startup diagnostics for either user interface.
-     *
-     * @return Warning and recovery instructions, or an empty string after a successful load.
-     */
-    public String getLoadWarning() {
-        if (!hasLoadErrors) {
-            return "";
-        }
-        return String.join("\n", loadWarnings) +
-                "\nSome saved tasks could not be loaded. Changes are disabled.\n" +
-                "Repair the saved file or restore read access, then restart James.";
-    }
-
-    /**
-     * Returns specific recovery guidance for the latest failed save, when available.
-     *
-     * @return Save failure guidance, or an empty string for an ordinary I/O failure.
-     */
-    public String getSaveError() {
-        return saveError;
-    }
-
-    /**
-     * Reads the current disk version without treating an inaccessible file as missing.
-     */
-    private byte[] readCurrentContents() throws IOException {
-        return Files.notExists(filePath) ? null : Files.readAllBytes(filePath);
-    }
-
-    /**
      * Saves all current tasks in the task list to the persistent storage file.
      * Automatically creates any necessary parent directories.
      *
@@ -137,51 +90,22 @@ public class Storage {
         if (hasLoadErrors) {
             return false;
         }
-        saveError = "";
+        Path temporaryFile = null;
         try {
             Path destination = filePath.toAbsolutePath();
             Files.createDirectories(destination.getParent());
-            Path lockPath = destination.resolveSibling(destination.getFileName() + ".lock");
-            // Keep the lock file in place: deleting it could let writers lock different files.
-            try (FileChannel channel = FileChannel.open(lockPath, StandardOpenOption.CREATE,
-                    StandardOpenOption.WRITE);
-                    FileLock lock = channel.tryLock()) {
-                if (lock == null) {
-                    saveError = "Another instance is saving tasks. Try again.";
-                    return false;
-                }
-                if (!Arrays.equals(savedContents, readCurrentContents())) {
-                    saveError = "The saved file changed outside this instance. Restart James before making changes.";
-                    return false;
-                }
-                return writeTasks(taskList, destination);
-            }
-        } catch (OverlappingFileLockException e) {
-            saveError = "Another instance is saving tasks. Try again.";
-            return false;
-        } catch (IOException | SecurityException e) {
-            return false;
-        }
-    }
-
-    /**
-     * Replaces the task file after writing all contents while holding the writer lock.
-     */
-    private boolean writeTasks(TaskList taskList, Path destination) throws IOException {
-        Path temporaryFile = null;
-        try {
             temporaryFile = Files.createTempFile(destination.getParent(), "james-", ".tmp");
             StringBuilder contents = new StringBuilder();
             for (Task task : taskList.getTasks()) {
                 contents.append(task.toFileString()).append(System.lineSeparator());
             }
-            byte[] bytes = contents.toString().getBytes(StandardCharsets.UTF_8);
-            Files.write(temporaryFile, bytes);
+            Files.writeString(temporaryFile, contents);
             // Replace only after the complete new contents have been written.
             Files.move(temporaryFile, destination, StandardCopyOption.ATOMIC_MOVE,
                     StandardCopyOption.REPLACE_EXISTING);
-            savedContents = bytes;
             return true;
+        } catch (IOException | SecurityException e) {
+            return false;
         } finally {
             if (temporaryFile != null) {
                 try {
